simplepod-ingress-clusterip/reactPod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: react-app
  labels:
    app: react-app
spec:
  nodeName:  gaganchohan-nodepool-cjk54
  containers:
  - name: react-app-container
    image: mrgaganchohan/rickmorty:64version1
    # image: salamflamo/react-hello
    resources:
      requests:
        memory: "500Mi"
        cpu: 500m
      limits:
        memory: "600Mi"
        cpu: 600m
  imagePullSecrets:
    - name: image-pull-secret-react-ingress

# Create secret like this

# kubectl create secret docker-registry image-pull-secret \
#   # --docker-server=reactregistrygagan.azurecr.io \
# --docker-server=https://index.docker.io/v1/ \ #for dockerhub enter this
#   --docker-username=mrgaganchohan \
#   --docker-password=tc67hQ_69S{.H,j \
#   --docker-email=gaganchohan@icloud.com -o yaml --dry-run

# copy and paste it in a file and then apply
